--- a/skills.html
+++ b/skills.html
@@ -129,6 +129,8 @@
     text-align: center;
     margin-top: -170px; /* Adjust this to bring it closer to "TORRE" */
     font-weight: bold;
+    z-index: 10;
+    mix-blend-mode: lighten;
 }
         
         button{
@@ -187,7 +189,7 @@
         
         clip-path: text;
         }
-        .mhm a {text-decoration: wavy;
+        .mhm a {text-decoration: none;
         font-weight: bolder;}
 .mhm{
     margin-bottom: 80px;
